2010-07-24  Matevz Tadel  <matevz.tadel@ijs.si>

	* oolite_load.C:
	New macro -- test loading of OOlite model files.

2010-01-24  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C: Change gl-menu-button for Crawler-drive to its new
	name in a different class (TringuCam->TSPupilInfo).

2010-01-20  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Add "Shoot" to Crawler menu.
	CrawlerSpiritio does not have gun-al-source anymore.

2010-01-16  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Put tringula fields under "var/fields". This is not perfect as
	they really depend on what player knows but is better then to have
	them as children of TringuRep.

2010-01-11  Matevz Tadel  <matevz.tadel@ijs.si>

	* sounds/big_explosion.ogg:
	* sounds/big_explosion.wav:
	Replace wav with ogg.

	* tringula.C:
	Switch to ogg files.

2010-01-08  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Create a TringulaTester instance.

2010-01-07  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Set PupilInfo link of TringuRep.

2009-12-23  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Move explode button to Extendio (from Crawler).

2009-12-23  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Put extendio menues into "var/glassui".
	Add entry for Extendio.
	Remove repeated entries - class structure is traversed now.

2009-12-22  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Use TringuRep as primary/only representation of Tringula.
	Add buttons to switch shadows and flat/smooth shading to
	terrain-control menu.
	Increase initial pupil window size to 1024x768.

2009-12-16  Matevz Tadel  <matevz.tadel@ijs.si>

	* sounds:
	* sounds/big_explosion.wav:
	New dir/file.

	* tringula.C:
	Add al-buffer for explosion.
	Add overlay button to initiate crawler explosion.

2009-12-07  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Crate AL-source for crawler gun.

2009-12-04  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C: