@@ -1,0 +1,243 @@
+42 120 80 GtsSurface GtsFace GtsEdge GtsVertex
+0.205568657147843115 0.307769168014852212 -0.100000000000000006
+-0.49999997883663444 0.484161359779944345 -0.100000000000000006
+-0.499999978144304524 0.500000021855694476 0
+-0.500000015229091432 -0.348400978144304707 0.349999999999999978
+-0.500000011115391607 -0.254290498974547974 0.349999999999999978
+-0.230497284364548694 0.254290530905600054 0.349999999999999978
+0.819480212974923239 -0.137637883608759837 -0.0999999999999999778
+1.00557219811561827 -0.0726544784778851982 -0.0999999999999999778
+0.187784876372334431 -0.312215123627665569 -0.100000000000000006
+1.07941488056354906 -0.0324919298899471604 -0.100000000000000089
+1.09999999999999876 -4.80825290020486483e-08 -0.100000000000000033
+0.819480225007606533 0.137637811967520951 -0.0999999999999999778
+0.677096233661145241 0.177096233661145241 -0.100000000000000006
+1.49999999999999845 -6.55670850027936186e-08 0
+0.0279520819724269343 -0.113721590697102456 0.349999999999999978
+-0.230497306595332851 -0.25429051075488579 0.349999999999999978
+-0.500000017681606401 -0.404507978144304614 0.293893000000000015
+1.0055722044672708 0.0726543905679678803 -0.0999999999999999778
+-0.499999986546980968 0.307769198856238324 -0.100000000000000006
+-0.499999993983657853 0.137637869643835398 -0.100000000000000006
+-0.500000021855694476 -0.499999978144304524 0
+0.20556863024180605 -0.307769185986234539 -0.100000000000000006
+-0.499999996824173176 0.0726544563786215292 -0.0999999999999999778
+-0.499999998579734151 0.0324919045629172704 -0.100000000000000089
+-0.4999999999999995 2.18556950009312062e-08 0
+-0.4999999999999995 2.18556950009312062e-08 -0.100000000000000033
+-0.500000001420264906 -0.0324918608515272628 -0.100000000000000089
+0.100000000000000033 -4.37113900018624587e-09 0.349999999999999978
+-0.499999982318392544 0.404508021855694566 0.293893000000000015
+-0.499999979214009627 0.475528021855694483 0.154508000000000006
+-0.499999988884607338 0.254290542685937926 0.349999999999999978
+-0.499999995029070776 0.113721611330972888 0.349999999999999978
+1.07941488340407998 0.0324918355244973867 -0.100000000000000089
+-0.500000013453018033 -0.307769155144848372 -0.100000000000000006
+-0.4999999999999995 2.18556950009312062e-08 0.349999999999999978
+0.0279520919142844382 0.113721588253453298 0.349999999999999978
+-0.500000020785989374 -0.475527978144304531 0.154508000000000006
+-0.500000004970928336 -0.113721567619582881 0.349999999999999978
+-0.500000003175825825 -0.0726544126672315771 -0.0999999999999999778
+-0.500000006016341092 -0.137637825932445446 -0.100000000000000006
+-0.500000021163364616 -0.484161316068554393 -0.100000000000000006
+-0.499999984770907513 0.348401021855694659 0.349999999999999978
+1 2
+3 2
+1 3
+4 5
+6 4
+6 5
+7 8
+9 7
+9 8
+10 11
+9 10
+9 11
+12 13
+13 14
+12 14
+15 16
+6 15
+6 16
+17 4
+17 5
+18 12
+9 18
+9 12
+2 19
+13 2
+13 19
+19 20
+13 20
+21 22
+22 14
+14 21
+20 23
+13 23
+23 24
+13 24
+25 20
+25 19
+24 26
+13 26
+26 27
+13 27
+28 15
+15 14
+28 14
+25 29
+29 30
+25 30
+31 29
+25 31
+30 14
+29 14
+32 31
+25 32
+33 18
+9 33
+3 19
+25 3
+29 6
+6 14
+34 21
+21 25
+25 34
+25 5
+25 17
+35 32
+6 35
+6 32
+36 28
+6 36
+6 28
+16 4
+16 17
+37 14
+21 37
+38 35
+6 38
+22 7
+9 22
+39 40
+13 39
+13 40
+11 33
+25 26
+25 24
+8 14
+7 14
+25 35
+25 40
+25 39
+8 10
+10 14
+18 14
+33 14
+41 9
+13 41
+13 9
+25 23
+3 14
+1 14
+27 39
+13 1
+30 3
+36 14
+11 14
+41 21
+21 9
+40 34
+5 38
+31 42
+42 29
+25 37
+37 17
+25 27
+25 38
+17 14
+6 31
+16 14
+42 6
+34 41
+13 34
+1 2 3
+4 5 6
+7 8 9
+10 11 12
+13 14 15
+16 17 18
+19 4 20
+21 22 23
+24 25 26
+27 26 28
+29 30 31
+32 28 33
+34 33 35
+27 36 37
+38 35 39
+40 39 41
+42 43 44
+45 46 47
+48 45 49
+50 46 51
+52 49 53
+54 55 22
+56 37 57
+58 59 51
+60 61 62
+20 63 64
+65 66 67
+68 69 70
+71 19 72
+73 74 31
+75 76 66
+77 78 8
+79 80 81
+82 12 55
+38 83 84
+7 85 86
+65 53 87
+79 88 89
+90 91 85
+77 86 30
+54 92 93
+21 15 92
+94 95 96
+32 97 36
+3 98 99
+100 41 80
+14 101 99
+47 102 57
+68 44 103
+98 102 50
+82 93 104
+105 94 106
+106 78 29
+2 24 56
+13 23 96
+107 62 88
+108 6 76
+109 110 48
+111 112 64
+1 101 25
+10 104 91
+100 89 113
+42 70 17
+108 114 63
+71 18 5
+61 74 111
+115 112 73
+52 67 116
+69 103 59
+72 115 117
+110 118 58
+16 117 43
+40 113 83
+119 105 60
+90 9 11
+34 84 97
+119 120 95
+109 116 118
+75 87 114
+107 81 120
